--- a/src/styles/ServerInfoBar.css
+++ b/src/styles/ServerInfoBar.css
@@ -24,7 +24,6 @@
 .ServerInfo {
     width: 100%;
     height: 84%;
-    overflow-y: scroll;
     display: flex;
     flex-direction: column;
     align-items: center;
